[package]
name = "sol-learn-token"
version = "1.0.0"
description = "Building a solana token as a learning exercise"
autors = ["Michael Kremer"]
repository = "https://github.com/KremerMichael/sol-learn"
license = "Apache-2.0"
edition = "2018"

[features]
exclude_entrypoint = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
remove_dir_all = "=0.5.0"
solana-program = "1.4.3"
thiserror = "1.0"
arrayref = "0.3.6"
num_enum = "0.5.1"

[lib]
crate-type = ["cdylib", "lib"]
